--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id="canvas" width="600" height="400"></canvas>
+    <canvas id="canvas" width="800" height="400"></canvas>
 </body>
 <script>
     var canvas = document.querySelector("#canvas");
@@ -19,9 +19,9 @@
     function kolo(x,y){
         ctx.strokeStyle = "black";
         ctx.lineWidth = 5;
-        ctx.strokeRect(0,0,600,400);
+        ctx.strokeRect(0,0,canvas.width,canvas.height);
         var innerRadius = 0,
-        outerRadius = 50,
+        outerRadius = 100,
         radius = 30;
 
         var gradient = ctx.createRadialGradient(x, y, innerRadius, x, y, outerRadius);
@@ -46,18 +46,14 @@
 
     function start(){
         ctx.beginPath()
-        ctx.clearRect(0,0,600,400);
+        ctx.clearRect(0,0,canvas.width,canvas.height);
         
         if(c==0){
             x1= Math.floor(Math.random() * (1 -(-1)+1)) +(-1);
             y1 = Math.floor(Math.random() * (1 -(-1)+1)) +(-1);
-            if(y1==0)
+            if(x1 == 0 || y1 == 0)
             {
-                y1 =1;
-            }
-            if(x1 == 0 && y1 == 0)
-            {
-                x1 =1;
+                x1 =-1;
                 y1 =1;
             }
             c++;
